--- a/index.html
+++ b/index.html
@@ -54,11 +54,8 @@
               <nav>
                 <ul>
                   <li><a href="#slider">Home</a></li>
-                  <li><a href="#section2">About Us</a></li>
-                  <li><a href="#section3">Our Services</a></li>
-                  <li><a href="#section4">Latest Work</a></li>
-                  <li><a href="#section5">Testimonials</a></li>
-                  <li><a href="#section6">Contact Us</a></li>
+                  <li><a href="#section2">Common Problems</a></li>
+                  <li><a href="#section3">Our Solutions</a></li>
                 </ul>
               </nav>
             </div>
